# word-counter

./: .gitignore  README.md  install.sh  pyproject.toml
tests/: test_counter.py
word_counter/: __main__.py  cli.py  counter.py  dictionary.py  extractor.py  writer.py
