[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "word-counter"
version = "0.1.0"
description = "Count word frequencies in .txt or .pdf file(s) and output CSV(s)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.24.0",
]

[project.scripts]
word-counter = "word_counter.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["word_counter*"]
